deploy1_autoscale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy-autoscale
  labels:
    app: k8s-app
    env: prod
    owner: Vadim
spec:
  replicas: 2
  selector:
    matchLabels:
      project: test2
  template:
    metadata:
      labels:
        project: test2
    spec:
      containers:
        - name: test2-web
          image: adv4000/k8sphp:latest
          ports:
            - containerPort: 80
