deploy_pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    name: myapp
spec:
  containers:
  - name: db
    image: mysql
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
